--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 
     <h2> <u> מילות פתיחה</u>  </h2>
 
-     <img  src="תמונה 2.jpg"/>
+         <img  src="photos/girls.jpg"/>
+	
 
 
 <p id="third">  אנשים רבים מוקסמים מזוגות של תאומים זהים או תאומות זהות, רבות בשל האמונה שהם חולקים לא רק דמיון חיצוני אלא גם דמיון פנימי, רגשי ומחשבתי. בפועל, יש בכך מן האמת, גם אם לא לחלוטין. תאומים אכן נוטים לבצע בחירות דומות בחייהם ולהיות בעלי טעם דומה, נוכח הזהות הגנטית שלהם והסביבה המשותפת בה הם גדלו  </p>
@@ -57,7 +58,7 @@
 <p>.תאומים בלתי זהים (דיזיגוטיים)*תאומים שנוצרו משתי ביציות שונות, שהופרו על ידי שני תאי זרע שונים. שני העוברים הנוצרים בעלי מטען גנטי שונה  </p>
 
 
-     <img  src="תמונה 3.jpg"/>
+         <img  src="photos/lia.jpg"/>
 
      <h2>  <u>למה הקשר בין תאומים חזק כל כך?</u> </h2>
 
@@ -81,7 +82,7 @@
 
 </body>
 
-     <img  SRC= "תמונה 4.jpg"/>
+     i<img  src="photos/gaya.jpg"/>
 
 
 <p>  <strong>ליצירת קשר </strong></p> </p>
