--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		</style>
         <h1 style="background-color:blue;COLOR:yellow;"> כול מה שרציתם לדעת על תאומים </h1>
 
-         <img  src="image.jpg.jpg"/> 
+         <img  src="photos/image.jpg"/> 
 
 <P>.היי ברוכות/ים הבאות/ים לאתר שלי שמי קטיה   נעים מאוד . נשואה לברוך ואמא של ליה וגאיה ואדם</P> 
 <p> התאומות שלי הפכו אותי לאמא בגיל צעיר אני עדיין זוכרת את התקופה שחיפשתי כל פיסת מידע  על מזה</p>
