--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 
 
      <ul>
-      <li> <b> <a href="#third"> מילות פתיחה</a>   </b>  </li>
-      <li> <b> <a href= "#about"> סוגי תאומים </a>  </b> </li>
-      <li> <b> <a href ="#third">למה הקשר בין תאומים חזק כל כך? </a></b></li>
-      <li> <b> <a href="#aboutme"> ניפוץ מיתוסים </a> </b></li
+       <b> <a href="#third"> מילות פתיחה</a>   </b>  
+       <b> <a href= "#about"> סוגי תאומים </a>  </b> 
+       <b> <a href ="#third">למה הקשר בין תאומים חזק כל כך? </a></b>
+       <b> <a href="#aboutme"> ניפוץ מיתוסים </a> </b>
 
  
 
