--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 </body>
 
-     i<img  src="photos/girls.jpg"/>
+     i<img  src="photos/gaya.jpg"/>
 
 
 <p>  <strong>ליצירת קשר </strong></p> </p>
