--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ h1, h2, h3, h4, h5, h6 {
 
     <div class=" m6 w3-padding-large">
 
-<img src="html/image.jpg"width="600"height="550"style="float:right;margin-left:5px "/> 
+<img src=image/image.jpg"width="600"height="550"style="float:right;margin-left:5px "/> 
 	
       <h1 class="w3-center">קצת עליי</h1><br>
       <h5 class="w3-center">התאומות שלי ליה וגאיה</h5>
