--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ h1, h2, h3, h4, h5, h6 {
 
     <div class=" m6 w3-padding-large">
 
-<img src=image/image.jpg" /> width="600"height="550"style="float:right;margin-left:5px "/> 
+<img src=image/image.jpg"width="600"height="550"style="float:right;margin-left:5px "/> 
 	
       <h1 class="w3-center">קצת עליי</h1><br>
       <h5 class="w3-center">התאומות שלי ליה וגאיה</h5>
@@ -80,7 +80,7 @@ h1, h2, h3, h4, h5, h6 {
   <div class=" m6 w3-padding-large"id="kinds"id="kinds">
   
   
-  <img src="html/girls.jpg"width="500"height="550"style="float:left;margin-right:20px"/> 
+  <img src="image/girls.jpg"width="500"height="550"style="float:left;margin-right:20px"/> 
     
       <h1 class="w3-center">מילות פתיחה</h1><br>
     
