--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ h1, h2, h3, h4, h5, h6 {
       
       <p class="w3-center ">.היי ברוכות/ים הבאות/ים לאתר שלי שמי קטיה נעים מאוד</P>
       <p class="w3-center">, נשואה לברוך ואמא של אדם וליה וגאיה התאומות המקסימות שלי </p>
-      <p class="w3-center">לאמא  צעיר אני עדיין זוכרת את התקופה שחיפשתי כל פיסת</p>
+      <p class="w3-center"> הבנות הפכו אותי לאמא בגיל צעיר אני עדיין זוכרת את התקופה שחיפשתי כל פיסת </p>
 	  
 	  
 	  
